--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 <div class="container mt-5 align-items-center">
     <div class="step0 row">
         <div class="col-md-6 text-center border-end align-items-center">
-            <div class="h5 text-center">Already created an itinerary?<br>Enter it's unique code below.</div>
+            <div class="h5 text-center">Did someone share an itinerary with you?<br>Have you already created an itinerary yourself?<br><br>Enter it's code below.</div>
             
             <div class="input-group my-3">
                 <span class="input-group-text" id="basic-addon1">Itinerary Code: </span>
