--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -226,13 +226,8 @@
                 </div>
               </div>
             </div>
+            <br>
             <div class="row">
-              <div class="col"></div>
-              <div class="col-9 d-flex justify-content-end">
-                <div id="timeLeft" class="font-weight-bold"></div>
-              </div>
-            </div>
-            <div class="row absolute-bottom">
               <div class="col">
                 <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target=".bd-example-modal-sm">Map Key</button>
                   <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
@@ -307,7 +302,7 @@
                   </div>
               </div>
               <div class="modal-footer">
-                  <div id="generatedCode" class="mr-auto"></div>
+                  <div id="generatedCode" style="margin-left:15;margin-right:auto">TEsT</div>
                   <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                   <button type="button" class="btn btn-primary" onclick="saveItinerary()" id="generateCodeButton">Save</button>
               </div>
