--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,8 @@
 <body class="">
     <div id="contents" style="height:100%">
         <div class="row" style="width:100%">
-            <div class="col" style="max-width:fit-content; padding:50px">
-                <div class="text-center" style="padding:50px">
+            <div class="col" style="max-width:fit-content; padding:50px;">
+                <div class="text-center" style="padding:50px;">
                     <br>
                     <div class="h5">Build a new itinerary from scratch (for newcomers)</div>
                     <br>
