--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
                     <div class="h5">Build a new itinerary from scratch (for newcomers)</div>
                     <br>
                     <button class="btn btn-lg btn-primary" id="newItineraryButton">Plan New Trip</button>
+                    <br><br><br>
                     <hr>
                     <div class="text-center align-items-center" style="padding:50px">
                         <div class="h5">Did you want to see an itinerary that exists already?<br>Copy its unique code and paste it below!<br></div>
@@ -48,10 +49,10 @@
             <div id="carousel" class="col carousel slide" data-bs-ride="carousel" style="height:100%; width:100%">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="pictures/map.png" class="d-block w-100" alt="map">
+                    <img src="static/map.png" class="d-block w-100" alt="map">
                   </div>
                   <div class="carousel-item">
-                    <img src="pictures/itinerary.png" class="d-block w-100" alt="itinerary">
+                    <img src="static/itinerary.png" class="d-block w-100" alt="itinerary">
                   </div>
                 </div>
               </div>
