--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,10 +49,10 @@
             <div id="carousel" class="col carousel slide" data-bs-ride="carousel" style="height:100%; width:100%">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="static/map.png" class="d-block w-100" alt="map">
+                    <img src="static/map.PNG" class="d-block w-100" alt="map">
                   </div>
                   <div class="carousel-item">
-                    <img src="static/itinerary.png" class="d-block w-100" alt="itinerary">
+                    <img src="static/itinerary.PNG" class="d-block w-100" alt="itinerary">
                   </div>
                 </div>
               </div>
