--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,26 +3,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Itinerary Generator</title>
   <link rel="shortcut icon" href="#">
-  <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/lib/jQuery-3.4.1.js"></script>
-  <script src="/js/lib/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/lib/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/lib/jQuery-3.4.1.js"></script>
+  <script src="js/lib/bootstrap.min.js"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj-qnkdxbjjZIlQ9mM4x4bR7L_bXXpDeU&libraries=places&v=weekly" defer></script>
-  <script src="/js/requests.js"></script>
-  <script src="/js/itinerary.js"></script>
-  <script src="/js/mapControls.js"></script>
-  <script src="/js/homepage.js"></script>
-  <script src="/js/newMap.js"></script>
-  <script src="/js/searchbar.js"></script>
+  <script src="js/requests.js"></script>
+  <script src="js/itinerary.js"></script>
+  <script src="js/mapControls.js"></script>
+  <script src="js/homepage.js"></script>
+  <script src="js/newMap.js"></script>
+  <script src="js/searchbar.js"></script>
 
 </head>
 
 <div id="nav-placeholder"></div>
 <script>
   $(function(){
-    $("#nav-placeholder").load("/nav");
+    $("#nav-placeholder").load("nav");
   });
 
   $(document).ready(function (){
@@ -241,7 +241,7 @@
                           </div>
                           <div class="row">
                             <div class="col">
-                              <img src="../icons/star.png" alt="Star" width="40" height="40">
+                              <img src="icons/star.png" alt="Star" width="40" height="40">
                             </div>
                             <div class="col d-flex align-items-center">
                               <p>Origin</p>
@@ -252,7 +252,7 @@
                           </div>
                           <div class="row">
                             <div class="col">
-                              <img src="../icons/flag.png" alt="Flag" width="48" height="48">
+                              <img src="icons/flag.png" alt="Flag" width="48" height="48">
                             </div>
                             <div class="col d-flex align-items-center">
                               <p>Destination</p>
