--- a/views/newItinerary.ejs
+++ b/views/newItinerary.ejs
@@ -3,22 +3,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itinerary Generator</title>
     <link rel="shortcut icon" href="#">
-    <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/lib/jQuery-3.4.1.js"></script>
-    <script src="/js/lib/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/lib/jQuery-3.4.1.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj-qnkdxbjjZIlQ9mM4x4bR7L_bXXpDeU&libraries=places&v=weekly"></script>
-    <script src="/js/requests.js"></script>
-    <script src="/js/itinerary.js"></script>
-    <script src="/js/newItineraryPage.js"></script>
+    <script src="js/requests.js"></script>
+    <script src="js/itinerary.js"></script>
+    <script src="js/newItineraryPage.js"></script>
     
 </head>
 
 <div id="nav-placeholder"></div>
 <script>
     $(function(){
-        $("#nav-placeholder").load("/nav");
+        $("#nav-placeholder").load("nav");
     });
 </script>
 
