--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,10 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="shortcut icon" href="#">
-    <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/lib/jQuery-3.4.1.js"></script>
-    <script src="/js/lib/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/lib/jQuery-3.4.1.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
 </head>
 
 
